# HtmlDashBoardGeneration

./: DashboardGen.py  pyproject.toml
templates/: Index.html
