[tool.poetry]
name = "htmldashboardgeneration"
version = "0.1.0"
description = "HTML Dashboard Generation System"
authors = ["ShanKonduru <ShanKonduru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"

[tool.poetry.group.dev.dependencies]
Flask = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
